# pulumi-nvidia-aicr

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  go.mod  go.sum
.github/workflows/: release.yml  test.yml
examples/: README.md
examples/aws-eks-inference-cs/: Program.cs  Pulumi.yaml  README.md
examples/aws-eks-inference-go/: Pulumi.yaml  README.md  go.mod  main.go
examples/aws-eks-inference-java/: Pulumi.yaml  README.md  pom.xml
examples/aws-eks-inference-py/: Pulumi.yaml  README.md  __main__.py  requirements.txt
examples/aws-eks-inference-ts/: Pulumi.yaml  README.md  index.ts  package.json
examples/aws-eks-training-cs/: AwsEksTraining.csproj  Program.cs  Pulumi.yaml  README.md
examples/aws-eks-training-go/: Pulumi.yaml  README.md  go.mod  main.go
examples/aws-eks-training-java/: Pulumi.yaml  README.md  pom.xml
examples/aws-eks-training-py/: Pulumi.yaml  README.md  __main__.py
examples/aws-eks-training-ts/: Pulumi.yaml  README.md  index.ts  package.json
examples/azure-aks-training-cs/: AzureAksTraining.csproj  Program.cs  Pulumi.yaml  README.md
examples/azure-aks-training-go/: Pulumi.yaml  README.md  go.mod  main.go
examples/azure-aks-training-java/: Pulumi.yaml  README.md  pom.xml
examples/azure-aks-training-py/: Pulumi.yaml  README.md  __main__.py  requirements.txt
examples/azure-aks-training-ts/: Pulumi.yaml  README.md  index.ts  (+1 more)
provider/: go.mod  go.sum
sdk/python/: pyproject.toml  setup.py
sdk/python/pulumi_nvidia_aicr/: __init__.py  _inputs.py  cluster_stack.py  provider.py  pulumi-plugin.json
(+205 files in other folders)
