[project]
  name = "pulumi_nvidia_aicr"
  description = "Deploy validated NVIDIA AI Cluster Runtime (AICR) recipes for GPU-accelerated Kubernetes clusters."
  dependencies = ["parver>=0.2.1", "pulumi>=3.165.0,<4.0.0", "semver>=2.8.1", "typing-extensions>=4.11,<5; python_version < \"3.11\""]
  keywords = ["pulumi", "nvidia", "aicr", "gpu", "kubernetes", "category/cloud"]
  readme = "README.md"
  requires-python = ">=3.9"
  version = "0.0.1+dev"
  [project.license]
    text = "Apache-2.0"
  [project.urls]
    Homepage = "https://github.com/pulumi-labs/pulumi-nvidia-aicr"
    Repository = "https://github.com/pulumi-labs/pulumi-nvidia-aicr"

[build-system]
  requires = ["setuptools>=61.0"]
  build-backend = "setuptools.build_meta"

[tool]
  [tool.setuptools]
    [tool.setuptools.package-data]
      pulumi_nvidia_aicr = ["py.typed", "pulumi-plugin.json"]
